test/expr/cast/precedence.code
// RUN: %target-typecheck-verify-language

immutable x: Bool = 3/4 as Float > 1/2 as Float

fn testInIf(a: Any) {
  if a as? Float {} // expected-error {{cannot be used as a boolean}} {{6-6=((}} {{17-17=) != nil)}}
  immutable _: Float = a as? Float // expected-error {{value of optional type 'Float?' must be unwrapped}}
  // expected-note@-1{{coalesce}}
  // expected-note@-2{{force-unwrap}}
}
